# linda-communication

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: initial.tex
src/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  Elem.cpp  Elem.hpp  QueryLexer.cpp  QueryLexer.hpp  QueryParser.cpp  QueryParser.hpp  StringOrNumber.cpp  StringOrNumber.hpp  Tuple.cpp  Tuple.hpp  TupleParser.cpp  TupleParser.hpp  main.cpp  sync.cpp  sync.hpp  utils.hpp
tests/: BufferTests.cpp  QueryParserTests.cpp  main.cpp
